--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.js"
+    "dev": "tsx watch src/index.js",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
+    "format": "prettier . -w"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@neondatabase/serverless": "^1.0.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "hono": "^4.7.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.31.0",
+    "prettier": "3.5.3",
     "tsx": "^4.7.1"
   },
   "version": "1.0.0",
